# pLannotate-api-docker

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
